Show student's technical error on exam line

--- a/less/result-list.less
+++ b/less/result-list.less
@@ -58,7 +58,7 @@
     }
 }
 
-.student-results {
+.student-exam-results {
     .header {
       font-weight: normal;
       padding: 10px;
@@ -121,6 +121,13 @@
   
       td.exam-score {
         min-width: 75px;
+      }
+
+      span.exam-technical-error {
+        text-align: right;
+        padding-right: 10px;
+        font-size: 12px;
+        color: #a6a6a6;
       }
   
       td:last-child {
