--- a/less/result-list.less
+++ b/less/result-list.less
@@ -122,18 +122,18 @@
       td.exam-score {
         min-width: 75px;
       }
-
-      span.exam-technical-error {
-        text-align: right;
-        padding-right: 10px;
-        font-size: 12px;
-        color: #a6a6a6;
-      }
   
       td:last-child {
         text-align: right;
         width: 100%;
   
+        .exam-technical-error {
+          text-align: right;
+          padding-right: 10px;
+          font-size: 12px;
+          color: #a6a6a6;
+        }
+
         .exam-status {
           padding-right: 10px;
           font-size: 12px;
