--- a/less/result-list.less
+++ b/less/result-list.less
@@ -41,7 +41,7 @@
       cursor: pointer;
       color: #6d6d6d;
       text-decoration: none;
-      padding: 3px 0px;
+      padding: 3px 0;
       margin-right: 10px;
       min-width: 100px;
       text-align: center;
@@ -80,7 +80,7 @@
       float: right;
       font-weight: bold;
       text-align: right;
-      padding-right: 0px;
+      padding-right: 0;
     }
   }
 
@@ -157,7 +157,7 @@
       font-weight: normal;
       font-size: 10px;
       font-style: italic;
-      padding-bottom: 0px;
+      padding-bottom: 0;
       border-radius: 15px 15px 0 0;
     }
 
