Fix hiding ssn and statements when printing

--- a/less/result-list.less
+++ b/less/result-list.less
@@ -178,7 +178,7 @@
       display: none;
     }
 
-    .student-results {
+    .student-exam-results {
       page-break-inside: avoid;
 
       tr,
