--- a/less/result-list.less
+++ b/less/result-list.less
@@ -1,4 +1,3 @@
-
 .result-list-component-container {
   max-width: 1500px;
   margin: 0 auto;
@@ -74,6 +73,10 @@
 
     > span {
       padding-right: 10px;
+    }
+
+    .ssn {
+      margin-left: 1rem;
     }
 
     .total-grade-points {
@@ -162,7 +165,7 @@
     }
 
     tr.not-best-result {
-      color: #a6a6a6
+      color: #a6a6a6;
     }
 
     tr.last-completed-exam td {
@@ -170,7 +173,6 @@
     }
   }
 }
-
 
 @media print {
   .result-list-component-container {
